# Sober

./: .gitignore  Library.cmake  Naming.cmake  README.md  Service.cmake  Sober.cmake  Stub.cpp  Test.cmake  Utility.cmake
Example/: CMakeLists.txt
Example/Executable/: CMakeLists.txt
Example/Executable/Application/: CMakeLists.txt  Stub.cpp
Example/Executable/TestExecutor/: CMakeLists.txt
Example/Service/: CMakeLists.txt
Example/Service/Display/: CMakeLists.txt
Example/Service/Display/Implementation/ConsoleASCII/: CMakeLists.txt
Example/Service/Display/Implementation/TestStub/: CMakeLists.txt
Example/Service/Persistence/: CMakeLists.txt
Example/Service/Persistence/Implementation/Binary/: CMakeLists.txt
Example/Service/Persistence/Implementation/PlainText/: CMakeLists.txt
Example/Service/Persistence/Implementation/TestStub/: CMakeLists.txt
Source/Sober/: Library.cmake  Naming.cmake  Service.cmake  Sober.cmake  Stub.cpp  Utility.cmake
